CSS update to style the page correctly on small screens.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
 body {
     position: relative;
 }
+
+.main {
+    margin: 0 1em 1em 1em;
+}
